--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,9 @@
 FROM node:18-alpine
 
 WORKDIR /src
-COPY package.json package-lock.json /src/
+COPY package.json package-lock.json ./
 RUN npm install
 
-COPY . /src
 EXPOSE 3000
 
 CMD ["npm", "start"]
