--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,11 @@
 FROM node:18-alpine
 
-WORKDIR /src
+WORKDIR /
 COPY package.json package-lock.json ./
 RUN npm install
+ENV PATH=/node_modules/.bin:$PATH
+
+WORKDIR /src
 
 EXPOSE 3000
 
