--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - node-server
     volumes:
       - ./frontend:/src
+      - ignore:/src/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WDS_SOCKET_PORT=0
@@ -19,6 +20,9 @@ services:
       - "8000:8000"
     depends_on:
       - mongodb
+    volumes:
+      - ./backend:/src
+      - ignore:/src/node_modules
 
   mongodb:
     image: mongo:latest
@@ -29,3 +33,4 @@ services:
 
 volumes:
   dbdata:
+  ignore:
