Got OAUTH working, removed email stuff

--- a/.env-template
+++ b/.env-template
@@ -1,3 +1,4 @@
 MONGO_URL=REPLACE ME
-POSTMARK_API=REPLACE ME
-POSTMARK_EMAIL=REPLACE ME
+GOOGLE_CLIENT_ID=REPLACE ME
+GOOGLE_CLIENT_SECRET=REPLACE ME
+CALLBACK_URL=REPLACE ME
