--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.6.3",
-    "postmark": "^3.1.1"
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0"
   },
   "scripts": {
     "start": "node server.js"
