--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "name": "backend",
+  "type": "module",
   "version": "1.0.0",
   "main": "server.js",
   "author": "",
