--- a/.env-template
+++ b/.env-template
@@ -1,4 +1,5 @@
 MONGO_URL=REPLACE ME
 GOOGLE_CLIENT_ID=REPLACE ME
 GOOGLE_CLIENT_SECRET=REPLACE ME
-CALLBACK_URL=REPLACE ME
+CALLBACK_URL=http://localhost:8000/auth/google/callback
+REDIRECT_URL=http://localhost/home
