OAUTH sessions working and react router in:

--- a/.env-template
+++ b/.env-template
@@ -3,3 +3,5 @@ GOOGLE_CLIENT_ID=REPLACE ME
 GOOGLE_CLIENT_SECRET=REPLACE ME
 CALLBACK_URL=http://localhost:8000/auth/google/callback
 REDIRECT_URL=http://localhost/home
+REACT_APP_SERVER_URL=http://localhost/backend
+BASE_URL=http://localhost
