--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,6 +8,7 @@ server { # simple reverse-proxy
         proxy_set_header    Connection 'upgrade';
         proxy_set_header    Host $host;
         proxy_cache_bypass  $http_upgrade;
+
     }
 
     location /auth/google {
@@ -17,5 +18,17 @@ server { # simple reverse-proxy
         proxy_set_header    Connection 'upgrade';
         proxy_set_header    Host $host;
         proxy_cache_bypass  $http_upgrade;
+
+    }
+
+    location /backend/ {
+        proxy_pass          http://node-server:8000/;
+        proxy_http_version  1.1;
+        proxy_set_header    Upgrade $http_upgrade;
+        proxy_set_header    Connection 'upgrade';
+        proxy_set_header    Host $host;
+        proxy_cache_bypass  $http_upgrade;
+
+
     }
   }
