--- a/.env-template
+++ b/.env-template
@@ -2,6 +2,6 @@ MONGO_URL=REPLACE ME
 GOOGLE_CLIENT_ID=REPLACE ME
 GOOGLE_CLIENT_SECRET=REPLACE ME
 CALLBACK_URL=http://localhost:8000/auth/google/callback
-REDIRECT_URL=http://localhost/home
+REDIRECT_URL=http://localhost/
 REACT_APP_SERVER_URL=http://localhost/backend
 BASE_URL=http://localhost
