--- a/.env-template
+++ b/.env-template
@@ -5,3 +5,5 @@ CALLBACK_URL=http://localhost:8000/auth/google/callback
 REDIRECT_URL=http://localhost/
 REACT_APP_SERVER_URL=http://localhost/backend
 BASE_URL=http://localhost
+AWS_ACCESS_KEY_ID=REPLACE ME
+AWS_SECRET_ACCESS_KEY=REPLACE ME
