--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1493.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0"
   },
@@ -18,5 +21,6 @@
   "main": "server.js",
   "author": "",
   "license": "ISC",
+  "keywords": [],
   "description": ""
 }
