Prep for deploy

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,23 @@
-FROM node:18-alpine
+FROM node:18-alpine as base
 
+FROM base as dev
 WORKDIR /
 COPY package.json package-lock.json ./
-RUN npm install
 ENV PATH=/node_modules/.bin:$PATH
+RUN npm install
 
 WORKDIR /src
 
 EXPOSE 3000
-
 CMD ["npm", "start"]
+
+FROM base as prod
+WORKDIR / 
+COPY . /
+RUN npm install
+# RUN npm install -g serve
+
+RUN npm run build
+
+CMD ["node", "server.js"]
+# CMD ["npm", "run", "deploy"]
